@@ -1,5 +1,6 @@
 12 March 2007
 
+* The timeout setting is now used for commands too.
 * Expand leading ~s into home directories where appropriate.
 * Section headings are now numbered in MANUAL.
 
@@ -123,4 +124,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.36 2007-03-12 11:21:42 nicm Exp $
+$Id: CHANGES,v 1.37 2007-03-12 14:39:38 nicm Exp $
